2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>
	
	* TickPlacement.cs: Added.

2007-07-18  George Giolfan  <georgegiolfan@yahoo.com>
	
	* TickBar.cs: Added a Freeze call on a StreamGeometry.

2007-07-12  George Giolfan  <georgegiolfan@yahoo.com>

	* ItemContainerGenerator.cs: Moved to System.Windows.Controls.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: ItemContainerGenerator.StatusChanged is now handled.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: SelectedItem now sets SelectedIndex.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: Fixed SelectedIndex.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: SelectedIndex now calls OnSelectionChanged.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: Fixed SelectedValueProperty.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: Added.

2007-06-17  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonBase.cs, Thumb.cs: Removed *Internal properties.

2007-06-16  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Fixed multiple row layout.

2007-06-16  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Fixed MeasureOverride.

2007-06-14  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Switched to Microsoft Panel as it needs to interact with ItemsControl and I don't know how to do that.

2007-06-12  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Minor improvement of ArrangeOverride.

2007-06-12  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Fixed ArrangeOverride.

2007-06-12  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Fixed MeasureOverride.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: An attempt at implementing the layout logic.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Added.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
