@@ -1,0 +1,12 @@
+#if Implementation
+namespace Mono.System.Windows.Controls.Primitives {
+#else
+namespace System.Windows.Controls.Primitives {
+#endif
+	public enum TickBarPlacement {
+		Left,
+		Top,
+		Right,
+		Bottom
+	}
+}
