@@ -1,5 +1,9 @@
 2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>
 	
+	* TickBarPlacement.cs: Added.
+
+2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>
+	
 	* TickPlacement.cs: Added.
 
 2007-07-18  George Giolfan  <georgegiolfan@yahoo.com>
